--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "A GUI to supervise Mesos offers in real time",
   "main": "main.go",
   "scripts": {
-    "start": "go run main.go --master zk://paas1:2181/mesos --port 9095",
+    "start": "app --master=zk://10.200.0.152:2181/mesos --port 9095 --hostname 0.0.0.0",
     "test": "go test -cover `go list ./... | grep -v tests` | sed ''/ok/s//$(printf \"\\033[32mok\\033[0m\")/'' | sed ''/FAIL/s//$(printf \"\\033[31mFAIL\\033[0m\")/''",
     "build": "go build -o bin/real-time-mesos-offers",
     "test-all": "go test -cover ./... | sed ''/ok/s//$(printf \"\\033[32mok\\033[0m\")/'' | sed ''/FAIL/s//$(printf \"\\033[31mFAIL\\033[0m\")/''",
     "watch": "watchify -t [ babelify --presets [ es2015 react ] ] server/public/js/main.jsx -o server/public/js/bundle.js",
     "browserify": "browserify -t [ babelify --presets [ es2015 react ] ] server/public/js/main.jsx -o server/public/js/bundle.js",
-    "postinstall":"npm run browserify"
+    "postinstall": "node_modules/browserify/bin/cmd.js -t [ babelify --presets [ es2015 react ] ] server/public/js/main.jsx -o server/public/js/bundle.js"
   },
   "dependencies": {
     "director": "^1.2.8",
@@ -24,7 +24,10 @@
     "redux": "^3.0.5",
     "resourceful": "^0.3.5",
     "restful": "^0.4.5",
-    "restler": "^3.4.0"
+    "restler": "^3.4.0",
+    "browserify": "~13.0.1",
+    "babel-preset-es2015": "~6.9.0",
+    "babel-preset-react": "~6.5.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
