--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "resourceful": "^0.3.5",
     "restful": "^0.4.5",
     "restler": "^3.4.0",
-    "browserify": "~13.0.1",
-    "babel-preset-es2015": "~6.9.0",
-    "babel-preset-react": "~6.5.0"
+    "browserify": "~13.0.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
